8241925: jextract should generate simple allocation, access API for C primitive types
Reviewed-by: mcimadamore, jvernee